--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
     "@types/axios": "^0.9.36",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
